# hugo_ws

./: .gitignore  README.md
src/hugo_robot/: CMakeLists.txt  package.xml
src/hugo_robot/launch/: complete_display.launch.py  display.launch.py
src/hugo_robot/scripts/: docking_sequence.py  simple_controller.py  trajectory_recorder.py  workspace_analyzer.py
src/hugo_robot/urdf/: hugo_arm.urdf.xacro  hugo_complete.urdf.xacro  materials.xacro
